# air360

./: .clang-tidy  .gitignore  .tool-versions  AGENTS.md  CLAUDE.md  README.md
.claude/skills/: air360-docs.md  air360-firmware-docs.md  air360-firmware-release-bundle.md  esp-idf-cpp-developer.md  firmware-change-checklist.md  firmware-doc-audit.md  firmware-subsystem-walkthrough.md
backend/: .env.example  CLAUDE.md  README.md  deploy-backend.sh  package-lock.json  package.json  tsconfig.json
backend/migrations/: 001_create_devices.sql  20260427091500_create_devices.sql  20260427091600_create_batches_and_measurements.sql  20260428120000_enable_timescaledb.sql  20260428130000_enable_measurements_compression.sql  20260428140000_add_device_registered_from_ip.sql  20260429000000_add_upload_secret_hash.sql  20260429100000_add_last_batch_id.sql  20260430000000_alter_lat_lng_to_float8.sql  (+2 more)
docs/: README.md  airrohr-firmware-server-contract.md  airrohr-firmware-ui-analysis.md  firmware-iterative-implementation-plan.md  modern-replacement-firmware-architecture.md  phase-1-hardware-boot-notes.md  phase-2-onboarding-hardware-notes.md  phase-3-sensor-architecture-notes.md  phase-3-web-ui-asset-plan.md  phase-4-6-7-backend-integration-plan.md  sim7600e-mobile-uplink-adr.md
firmware/: AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  README.md  firmware.code-workspace  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
firmware/main/include/air360/: app.hpp  ble_advertiser.hpp  ble_encoding.hpp  build_info.hpp  cellular_config_repository.hpp  cellular_manager.hpp  config_load_status.hpp  config_repository.hpp  config_transaction.hpp  connectivity_checker.hpp  crypto_utils.hpp  log_buffer.hpp  modem_gpio.hpp  network_manager.hpp  ota_service.hpp  sensor_format_utils.hpp  status_service.hpp  string_utils.hpp  time_utils.hpp  tuning.hpp  web_assets.hpp  web_form.hpp  web_request_body.hpp  web_server.hpp  web_server_internal.hpp  web_ui.hpp
firmware/main/include/air360/data/: data_layer.hpp
firmware/main/include/air360/network/: network_layer.hpp
firmware/main/include/air360/platform/: platform_layer.hpp
firmware/main/include/air360/sensors/: bus_config.hpp  sensor_config.hpp  sensor_config_repository.hpp  sensor_driver.hpp  sensor_manager.hpp  sensor_registry.hpp  sensor_types.hpp  transport_binding.hpp
firmware/main/include/air360/sensors/drivers/: aht30_sensor.hpp  bme280_sensor.hpp  bme680_sensor.hpp  bosch_i2c_support.hpp  dht_sensor.hpp  ds18b20_sensor.hpp  ens160_sensor.hpp  gps_nmea_sensor.hpp  htu2x_sensor.hpp  ina219_sensor.hpp  me3_no2_sensor.hpp  mhz19b_sensor.hpp  opt3001_sensor.hpp  pmsx003_sensor.hpp  ppd42ns_sensor.hpp  scd30_sensor.hpp  sds011_sensor.hpp  sht3x_sensor.hpp  sht4x_sensor.hpp  sps30_i2c_support.hpp  sps30_sensor.hpp  veml7700_sensor.hpp
firmware/main/include/air360/uploads/: air360_api_credentials.hpp  backend_config.hpp  backend_config_repository.hpp  backend_http_config.hpp  backend_registry.hpp  backend_types.hpp  backend_uploader.hpp  measurement_batch.hpp  measurement_store.hpp  upload_log_endpoint.hpp  upload_manager.hpp  upload_prune_policy.hpp  upload_transport.hpp
firmware/main/include/air360/uploads/adapters/: air360_api_uploader.hpp  air360_json_payload.hpp  custom_upload_uploader.hpp  influxdb_uploader.hpp  sensor_community_uploader.hpp
firmware/main/src/: app.cpp  app_main.cpp  ble_advertiser.cpp  build_info.cpp  cellular_config_repository.cpp  cellular_manager.cpp  config_repository.cpp  config_transaction.cpp  connectivity_checker.cpp  crypto_utils.cpp  log_buffer.cpp  modem_gpio.cpp  network_manager.cpp  ota_service.cpp  status_service.cpp  web_assets.cpp  web_server.cpp  web_ui.cpp
firmware/main/src/data/: data_layer.cpp
firmware/main/src/network/: network_layer.cpp
firmware/main/src/platform/: platform_layer.cpp
firmware/main/src/sensors/: sensor_config_repository.cpp  sensor_driver.cpp  sensor_manager.cpp  sensor_registry.cpp  transport_binding.cpp
firmware/main/src/sensors/drivers/: aht30_sensor.cpp  bme280_sensor.cpp  bme680_sensor.cpp  bosch_i2c_support.cpp  dht_sensor.cpp  ds18b20_sensor.cpp  ens160_sensor.cpp  gps_nmea_sensor.cpp  htu2x_sensor.cpp  ina219_sensor.cpp  me3_no2_sensor.cpp  mhz19b_sensor.cpp  opt3001_sensor.cpp  pmsx003_sensor.cpp  ppd42ns_sensor.cpp  scd30_sensor.cpp  sds011_sensor.cpp  sensirion_i2c_hal.cpp  sht3x_sensor.cpp  sht4x_sensor.cpp  sps30_sensor.cpp  veml7700_sensor.cpp
firmware/main/src/uploads/: air360_api_credentials.cpp  backend_config_repository.cpp  backend_http_config.cpp  backend_registry.cpp  measurement_store.cpp  upload_log_endpoint.cpp  upload_manager.cpp  upload_manager_config.cpp  upload_manager_status.cpp  upload_prune_policy.cpp  upload_transport.cpp
firmware/main/src/uploads/adapters/: air360_api_uploader.cpp  air360_json_payload.cpp  custom_upload_uploader.cpp  influxdb_uploader.cpp  sensor_community_uploader.cpp
firmware/main/src/web/: web_form.cpp  web_mutating_routes.cpp  web_ota_routes.cpp  web_request_body.cpp  web_runtime_routes.cpp  web_server_helpers.cpp
firmware/main/webui/: air360.css  air360.js  card_backend.html  card_sensor.html  item_overview_backend.html  item_overview_sensor.html  item_reading.html  item_section_row.html  page_backends.html  page_config.html  page_diagnostics.html  page_logs.html  page_root.html  page_sensors.html  page_shell.html
firmware/test/host/: CMakeLists.txt  test_backend_config.cpp  test_ble_encoding.cpp  test_measurement_store.cpp  test_sensor_community_uploader.cpp  test_upload_log_endpoint.cpp  test_upload_prune_policy.cpp  test_web_form.cpp  test_web_request_body.cpp
firmware/test/host/stubs/: esp_err.h  esp_event.h  esp_event_base.h  esp_netif.h  esp_wifi_types_generic.h  sdkconfig.h
firmware/test/host/stubs/freertos/: FreeRTOS.h  event_groups.h  semphr.h  task.h  timers.h
portal/: AGENTS.md  README.md  deploy-portal.sh  next.config.ts  package-lock.json  package.json
scripts/: check_firmware_docs.py  check_firmware_host_tests.py  check_style.py
(+249 files in other folders)
