idf_component_register(
    SRCS
        "src/app_main.cpp"
        "src/app.cpp"
        "src/build_info.cpp"
        "src/config_repository.cpp"
        "src/network_manager.cpp"
        "src/web_assets.cpp"
        "src/web_ui.cpp"
        "src/uploads/backend_config_repository.cpp"
        "src/uploads/backend_registry.cpp"
        "src/uploads/adapters/air360_api_uploader.cpp"
        "src/uploads/adapters/sensor_community_uploader.cpp"
        "src/uploads/measurement_store.cpp"
        "src/uploads/upload_manager.cpp"
        "src/uploads/upload_transport.cpp"
        "src/sensors/sensor_config_repository.cpp"
        "src/sensors/drivers/bosch_i2c_support.cpp"
        "src/sensors/drivers/bme280_sensor.cpp"
        "src/sensors/drivers/bme680_sensor.cpp"
        "src/sensors/drivers/dht_sensor.cpp"
        "src/sensors/drivers/ds18b20_sensor.cpp"
        "src/sensors/drivers/ens160_sensor.cpp"
        "src/sensors/drivers/gps_nmea_sensor.cpp"
        "src/sensors/drivers/htu2x_sensor.cpp"
        "src/sensors/drivers/me3_no2_sensor.cpp"
        "src/sensors/drivers/scd30_sensor.cpp"
        "src/sensors/drivers/sensirion_i2c_hal.cpp"
        "src/sensors/drivers/sps30_sensor.cpp"
        "src/sensors/drivers/veml7700_sensor.cpp"
        "third_party/adafruit_dht/DHT.cpp"
        "third_party/adafruit_busio/Adafruit_I2CDevice.cpp"
        "third_party/adafruit_busio/Adafruit_BusIO_Register.cpp"
        "third_party/adafruit_veml7700/Adafruit_VEML7700.cpp"
        "third_party/ens160/ScioSense_ENS160.cpp"
        "third_party/tinygpsplus/TinyGPS++.cpp"
        "src/sensors/sensor_manager.cpp"
        "src/sensors/sensor_registry.cpp"
        "src/sensors/transport_binding.cpp"
        "third_party/bme280/bme280.c"
        "third_party/bme68x/bme68x.c"
        "third_party/sps30/sensirion_common.c"
        "third_party/sps30/sensirion_i2c.c"
        "third_party/sps30/sps30_i2c.c"
        "src/status_service.cpp"
        "src/web_server.cpp"
    INCLUDE_DIRS
        "include"
        "third_party/bme280"
        "third_party/bme68x"
        "third_party/sps30"
        "third_party/adafruit_dht"
        "third_party/adafruit_busio"
        "third_party/adafruit_veml7700"
        "third_party/ens160"
        "third_party/tinygpsplus"
    REQUIRES
        esp_app_format
        esp_common
        esp_event
        esp_driver_gpio
        esp_http_client
        esp_http_server
        esp_driver_i2c
        esp_driver_uart
        esp-idf-lib__scd30
        esp-idf-lib__si7021
        espressif__ds18b20
        espressif__onewire_bus
        esp_adc
        efuse
        esp_psram
        esp_rom
        mbedtls
        esp_netif
        esp_system
        esp_timer
        esp_wifi
        freertos
        nvs_flash
    EMBED_TXTFILES
        "webui/air360.css"
        "webui/air360.js"
        "webui/page_root.html"
        "webui/page_config.html"
        "webui/page_sensors.html"
        "webui/page_backends.html"
        "webui/card_backend.html"
        "webui/card_sensor.html"
        "webui/item_overview_backend.html"
        "webui/item_overview_sensor.html"
)

target_compile_features(${COMPONENT_LIB} PRIVATE cxx_std_17)
