idf_component_register(
    SRCS
        "src/app_main.cpp"
        "src/app.cpp"
        "src/ble_advertiser.cpp"
        "src/build_info.cpp"
        "src/cellular_config_repository.cpp"
        "src/cellular_manager.cpp"
        "src/modem_gpio.cpp"
        "src/config_repository.cpp"
        "src/connectivity_checker.cpp"
        "src/network_manager.cpp"
        "src/web_assets.cpp"
        "src/web_ui.cpp"
        "src/uploads/backend_config_repository.cpp"
        "src/uploads/backend_http_config.cpp"
        "src/uploads/backend_registry.cpp"
        "src/uploads/adapters/air360_json_payload.cpp"
        "src/uploads/adapters/air360_api_uploader.cpp"
        "src/uploads/adapters/custom_upload_uploader.cpp"
        "src/uploads/adapters/influxdb_uploader.cpp"
        "src/uploads/adapters/sensor_community_uploader.cpp"
        "src/uploads/measurement_store.cpp"
        "src/uploads/upload_manager.cpp"
        "src/uploads/upload_transport.cpp"
        "src/sensors/sensor_config_repository.cpp"
        "src/sensors/drivers/bme280_sensor.cpp"
        "src/sensors/drivers/bme680_sensor.cpp"
        "src/sensors/drivers/dht_sensor.cpp"
        "src/sensors/drivers/ds18b20_sensor.cpp"
        "src/sensors/drivers/gps_nmea_sensor.cpp"
        "src/sensors/drivers/htu2x_sensor.cpp"
        "src/sensors/drivers/ina219_sensor.cpp"
        "src/sensors/drivers/mhz19b_sensor.cpp"
        "src/sensors/drivers/me3_no2_sensor.cpp"
        "src/sensors/drivers/scd30_sensor.cpp"
        "src/sensors/drivers/sht4x_sensor.cpp"
        "src/sensors/drivers/sensirion_i2c_hal.cpp"
        "src/sensors/drivers/sps30_sensor.cpp"
        "src/sensors/drivers/veml7700_sensor.cpp"
        "src/sensors/sensor_manager.cpp"
        "src/sensors/sensor_registry.cpp"
        "src/sensors/transport_binding.cpp"
        "third_party/sps30/sensirion_common.c"
        "third_party/sps30/sensirion_i2c.c"
        "third_party/sps30/sps30_i2c.c"
        "src/status_service.cpp"
        "src/log_buffer.cpp"
        "src/web_server.cpp"
    INCLUDE_DIRS
        "include"
        "third_party/sps30"
    REQUIRES
        esp_app_format
        esp_common
        esp_event
        esp_driver_gpio
        espressif__led_strip
        esp_http_client
        esp_http_server
        esp_driver_i2c
        esp_driver_uart
        esp-idf-lib__bme680
        esp-idf-lib__dht
        esp-idf-lib__scd30
        esp-idf-lib__sht4x
        esp-idf-lib__ina219
        esp-idf-lib__mhz19b
        esp-idf-lib__si7021
        esp-idf-lib__veml7700
        espressif__bme280
        espressif__i2c_bus
        espressif__ds18b20
        espressif__onewire_bus
        cinderblocks__esp_tinygpsplusplus
        esp_adc
        efuse
        esp_psram
        esp_rom
        mbedtls
        esp_netif
        esp_system
        lwip
        esp_timer
        esp_wifi
        bt
        espressif__mdns
        nordesems__esp-captive-portal
        esp_modem
        freertos
        nvs_flash
    EMBED_TXTFILES
        "webui/air360.css"
        "webui/air360.js"
        "webui/page_root.html"
        "webui/page_config.html"
        "webui/page_sensors.html"
        "webui/page_backends.html"
        "webui/page_diagnostics.html"
        "webui/card_backend.html"
        "webui/card_sensor.html"
        "webui/item_overview_backend.html"
        "webui/item_overview_sensor.html"
)

target_compile_features(${COMPONENT_LIB} PRIVATE cxx_std_17)
